# DCScan-ModulesAPI

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  DCSGen.py  DCSModulesAPIConfig.cmake.in  DCSModulesAPIConfigVersion.cmake.in  LICENSE.md  README.md  READ_DOCS.md  _d_c_s___acquisition_2include_2internal_8h.html  _d_c_s___acquisition_2include_2internal_8h_source.html  _d_c_s___core_2include_2internal_8h.html  _d_c_s___core_2include_2internal_8h_source.html  _d_c_s___engine_control_2include_2internal_8h.html  _d_c_s___engine_control_2include_2internal_8h_source.html  _d_c_s___module_acquisition_8h.html  _d_c_s___module_acquisition_8h_source.html  _d_c_s___module_core_8h.html  _d_c_s___module_core_8h_source.html  _d_c_s___module_engine_control_8h.html  _d_c_s___module_engine_control_8h_source.html  _d_c_s___module_network_8h.html  _d_c_s___module_network_8h_source.html  _d_c_s___module_utils_8h.html  _d_c_s___module_utils_8h_source.html  _d_c_s___network_2include_2internal_8h.html  _d_c_s___network_2include_2internal_8h_source.html  _d_c_s___utils_2include_2internal_8h.html  _d_c_s___utils_2include_2internal_8h_source.html  annotated.html  build.cmd  class_d_c_s_1_1_c_l_i_1_1_command-members.html  class_d_c_s_1_1_c_l_i_1_1_command.html  class_d_c_s_1_1_coms_1_1_cmd_buffer-members.html  class_d_c_s_1_1_coms_1_1_cmd_buffer.html  class_d_c_s_1_1_core_1_1_p_i_d-members.html  class_d_c_s_1_1_core_1_1_p_i_d.html  class_d_c_s_1_1_math_1_1_detection_range-members.html  class_d_c_s_1_1_math_1_1_detection_range.html  (+131 more)
DCS_Acquisition/: CMakeLists.txt
DCS_Acquisition/include/: DCS_ModuleAcquisition.h  internal.h
DCS_Acquisition/src/: daq.cpp  encoder.cpp  external_cmds.cpp  global_evts.cpp  temperature.cpp
DCS_Core/: CMakeLists.txt
DCS_Core/include/: DCS_ModuleCore.h  internal.h
DCS_Core/src/: auth.cpp  cli.cpp  db.cpp  math.cpp  memory.cpp  pid.cpp  threading.cpp
DCS_EngineControl/: CMakeLists.txt  DCSModuleEngineControl.vcxproj  DCSModuleEngineControl.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
DCS_EngineControl/include/: DCS_ModuleEngineControl.h  internal.h
DCS_EngineControl/src/: control_service.cpp  external_cmds.cpp  placeholder.c  serial_win.cpp  winusb.cpp
DCS_Network/: CMakeLists.txt
DCS_Network/include/: DCS_ModuleNetwork.h  internal.h
DCS_Network/src/: cli.cpp  client.cpp  message.cpp  server.cpp  socket.cpp
DCS_Utils/: CMakeLists.txt  DCSModuleUtils.vcxproj  DCSModuleUtils.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
DCS_Utils/include/: DCS_ModuleUtils.h  internal.h
DCS_Utils/src/: Logger.cpp  String.cpp  internal.cpp  timer.cpp
cmake/modules/: FindEIB7.cmake  FindLibNIDAQmx.cmake  FindOpenSSL.cmake
config/: exports.h  registry.cpp  registry.h
custom_targets/: CMakeLists.txt
custom_targets/src/: ci_daq_test.cpp  eib_test.cpp  enc_prec.cpp  local_daq_test.cpp  pid_test.cpp  rdb_test.cpp  string_test.cpp
docs/: Doxyfile.in
examples/sockets/: echo_client.cpp  echo_server.cpp  simple_client.cpp  simple_server.cpp
scripts/: DCSGen.py  common.py  install_configure.py  setup.cfg
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+44 more)
src/: CMakeLists.txt
src/DCS_EngineControl/: placeholder.c
src/api/: DCS_ModuleEngineControl.h
tests/: CMakeLists.txt
tests/include/: DCS_Assert.h
tests/src/: test_auth.cpp  test_counter.cpp  test_db.cpp  test_logger.cpp  test_memory.cpp  test_message.cpp  test_nidaq.cpp  test_serialcom.cpp  test_socket.cpp  test_threading.cpp  test_timer.cpp  test_usb.cpp
tests/utils/: gaussian_gen.py
